traefik-2.2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  traefik-ingress-service
spec:
  type: LoadBalancer
  selector:
    k8s-app: traefik-ingress
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 8080
      name: admin-web
      targetPort: 8080

# kind: Service
# apiVersion: v1
# metadata:
#   name: traefik-ingress-service
#   namespace: kube-system
# spec:
#   selector:
#     k8s-app: traefik-ingress
#   ports:
#     - protocol: TCP
#       port: 80
#       name: controller
#     - protocol: TCP
#       port: 8080
#       name: admin-web
