traefik-2.2/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: traefik-web-ui
#   namespace: kube-system
#   annotations:
#     kubernetes.io/ingress.class: traefik
# spec:
#   rules:
#   - host: traefik.knd.com
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: traefik-ingress-service
#           servicePort: 8080

# ---

kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: traefik-web-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: traefik.knd.com
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-ingress-service
              servicePort: 80
          - path: /dashboard
            backend:
              serviceName: traefik-ingress-service
              servicePort: 8080
